k8s/gcp/istio-ingress/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: istio-ingress
  labels:
    goldilocks.fairwinds.com/enabled: "true"
